# cleactl

./: .pre-commit-config.yaml  Cargo.toml  flake.nix
nix/: package.nix
src/: cli.rs  config.rs  main.rs
