[package]
name = "cleactl"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
color-eyre = "0.6.3"
eyre = "0.6.12"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
